[package]
name = "rust-currency-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
tokio = { version = "1.36", features = ["full"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
reqwest = { version = "0.11.26", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
lazy_static = "1.4.0"